2004-03-16  Vivien Malerba <malerba@gnome-db.org>
        * libsql/*: Improved the joins handling (changed the sql_table structure),
		    and added join type (LEFT, RIGHT, FULL).

2004-03-13  Vivien Malerba <malerba@gnome-db.org>
	* libsql/*: several improvements with a change in the sql_table structure.
		- added != symbol as WHERE condition
		- identifiers can now contain an underscore
		- improved ORDER BY support
		- improved JOIN support
		- improved WHERE conditions
	
2004-03-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/libgda.h:
	* libgda/Makefile.am: don't install gda-export.h nor gda-log.h, those
	should be internal files only.

2004-03-05  Vivien Malerba <malerba@gnome-db.org>

        * libsql/*: * incorporated Andrew's latest changes
		    * re-indented the whole code to the same style as libgda

2004-03-05  Vivien Malerba <malerba@gnome-db.org>

	* libsql/*: * Improved lexer rules for functions and SELECT without a FROM clause
		    * Added extra syntax to specify parameters: between [] after a field, can contain
		      :name, :descr, :type, :isparam, :nullok attributes.
		    * Added strings recognized between double quotes (example: "a good' string").

2004-03-04  Laurent Sansonetti <lrz@gnome.org>

	Fixes #132216

	* libgda/gda-client.c (gda_client_open_connection_from_string): Reuses
	existing connections by looking in the opened connections pool.

	* libgda/gda-client.c (gda_client_open_connection): Fixed a memory leak.

	Fixes #129560

	* libgda/gda-config.c (gda_config_set_string, gda_config_set_int,
	gda_config_set_float, gda_config_set_boolean): Changes the type of the key
	if already existing.

2004-03-03  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #131592

	* providers/odbc/gda-odbc-provider.c (process_sql_commands):
	UTF-8 conversions for SQLExecDirect() and SQLGetData().

2004-02-28  Vivien Malerba <malerba@gnome-db.org>

	* libsql/lexer.l: bug fixed
	* libsql/Makefile.am: make sure sql_parser.h is installed in