@@ -1,8 +1,19 @@
+2004-03-17  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* libgda/gda-config.[ch] (gda_provider_info_free): renamed from
+	gda_config_free_provider_info to match the other GdaProviderInfo-related
+	functions.
+	(gda_provider_info_get_type, gda_config_free_provider_list): renaming.
+
+	* libgda/gda-client.c (gda_client_open_connection): more renaming.
+
 2004-03-16  Vivien Malerba <malerba@gnome-db.org>
+
         * libsql/*: Improved the joins handling (changed the sql_table structure),
 		    and added join type (LEFT, RIGHT, FULL).
 
 2004-03-13  Vivien Malerba <malerba@gnome-db.org>
+
 	* libsql/*: several improvements with a change in the sql_table structure.
 		- added != symbol as WHERE condition
 		- identifiers can now contain an underscore
